# jackavery-web

./: .gitignore  Makefile  README.md  ansible.cfg  flake.nix  inventory.yml  inventory.yml.sample
.hooks/: pre-commit
group_vars/: all.secret.yml  all.yml
playbooks/: back.yml  deploy.yml  front.yml  media.yml  secrets.yml
roles/back/files/: .dockerignore  Cargo.toml  Dockerfile  build.sh  endpoints.rs  error.rs  main.rs
roles/back/files/endpoints/: hosts.rs  rasbot.rs
roles/back/tasks/: main.yml
roles/deploy/files/: Caddyfile  docker-compose.yml  nginx.conf
roles/deploy/files/hugo/: hugo.toml
roles/deploy/files/hugo/content/posts/: debootstrap_guide.md  moving_to_hugo.md  one_month_with_nixos.md
roles/deploy/files/web/: 404.html  index.html
roles/deploy/files/web/css/: style.css
roles/deploy/files/web/js/: 404.js  script.js
roles/deploy/files/web/legal/: PRIVACY.odt  SERVICE_AGREEMENT.odt
roles/deploy/files/web/post/: debian_install_for_arch_users.html  debootstrap_guide.html  linux_info.html  one_month_with_nixos.html
roles/deploy/files/web/tf2qp/: index.html
roles/deploy/files/web/tf2qp/css/: style.css
roles/deploy/files/web/tf2qp/js/: script.js
roles/deploy/tasks/: main.yml
roles/deploy/templates/: config.yml.j2
roles/front/files/: 404.html  Dockerfile  index.html  manifest.json  robots.txt
roles/front/files/css/: style.css
roles/front/files/js/: 404.js
roles/front/files/tf2/: index.html
roles/front/files/tf2/css/: style.css
roles/front/files/tf2/js/: script.js
roles/front/tasks/: main.yml
roles/media/tasks/: main.yml
